assert-struct/tests/snapshots/sets__set_rest_too_few_elements.snap
---
source: assert-struct/tests/sets.rs
expression: message
---
error: assert_struct! failed
 --> assert-struct/tests/sets_errors/rest_too_few_elements.rs:6:27
  |
6 |     assert_struct!(items, #(1, 2, ..)); // need at least 2 elements
  |                           ^ set pattern mismatch, got 1 element(s)
